情シス6問、他整理

--- a/AppliedInformation/午後/H27S.md
+++ b/AppliedInformation/午後/H27S.md
@@ -312,3 +312,117 @@ e ア
 
 選択肢の中で20ミリ秒よりも長い時間は「ウ」だけです。
 ```
+
+---
+
+## 情報システム開発 チケット販売システムの在庫調整機能の開発
+
+いや、久しぶりに敗北した。
+専門用語や知識等は関係なく、時系列を追って理論的に求めるタイプの問題だった。  
+全体的に言いたいことはわかったのだが、どうにも辻褄が合わなくてうんうん悩んでいたら30分を超えてしまった。  
+解説を一通り読んだ後だと、問題文中にヒントが散りばめられているのがわかりましたが、試験中に気が付くのは難しいと思います。  
+
+数字のマジックとロールバック処理をうまく組み合わせた問題だと思いました。  
+気が付かないと解けなかったり、混乱の渦に飲まれてしまうので、難易度は高めだなって思いました。  
+
+``` txt : 30分オーバー 1/7 実質2
+タグ × 要素
+
+D社が販売を再開できない 0%
+→対象公園が販売停止のままになる
+C社ファイル送信エラー 0%
+→C社ファイル受信回答未実施
+D社ファイル送信エラー 0%
+→C社ファイル受信回答済み
+
+閾値以上 × 販売可能
+閾値以下 × 販売不可
+ウ、エ、ア、イ
+---
+
+メモ
+
+在庫の整合性が合わなくなる
+いや、違うな。
+処理中は販売停止にするって話だったから、ずっと販売停止になったままになっちゃうのでは。
+D社のサイトが販売停止になったままになる
+
+---
+
+[1]
+〔aについて〕
+本文の〔ファイル形式の検討〕に登場します。在庫調整処理で使用するI/F（インタフェース）ファイルの形式としてCSV形式とXML形式を比べ、「[a]の追加によってデータ項目を追加できる」という特徴を備えたXML形式を採用しています。
+
+→
+タグってのはあくまで<>で定義している部分であって、要素ってのは<>と</>の間の事をいうらしい。
+自信満々にタグって答えたけど、正確には違う見たいね。
+職場だといっつもタグタグって言ってたからいつの間にか混同しちゃったみたいだ。
+
+
+[2][1]
+問題文には、"C社ファイル送信がエラーとなった場合にD社Webサイトで不具合が発生する"問題の解消のためにタイムアウト処理を追加したとあります。したがって、ここでは図1のタイムアウト処理がなかったときに発生する問題を考えることになります。
+
+〔システム処理方式の検討〕では「通信の異常などで，C社からのI/Fファイル送信のエラーを検出した場合，又はD社側でI/Fファイル受信タイムアウトを検出した場合は，その時点でC社，D社とも在庫調整処理前のDBの状態で販売を再開する。」という記載がありますが、図1のシーケンス図でタイムアウト処理がない場合には、D社在庫調整処理オブジェクトがC社ファイルを受け取って正常応答しない限り、D社の販売は再開されないことがわかります。つまり、C社ファイル送信がエラーとなった場合、チケット移動対象となった公演がD社Webサイトで販売停止のままとなる問題が発生します。
+
+∴対象公演が販売停止のままとなる
+
+→
+最初は販売停止って書いたけど、少しひねって回答してしまった。
+いずれにしても、お客さんがチケットを入手できない状況であり続けるのに代わりはないから部分点はもらえるだろう。
+
+
+[2][2]
+〔b，cについて〕
+シーケンス図における複合フラグメント「alt」はAlternativeの略で、複数の条件分岐を表します。altの中を点線で区切り、各区画に記入されたゲート条件が成立するとその区画内のシーケンスを実行します。
+
+図1ではゲート条件[b]が成立したときにC社在庫調整処理オブジェクトに処理中止のメッセージ、D社販売処理オブジェクトに販売再開のメッセージを送っていることから、[b]は「通信がうまくいかなかった」ことを表す条件である必要があります。問題文に「図1中のメッセージ名称を用いた適切な字句を答えよ」という条件が付いていることに注意すると、[b]には「C社ファイル受信応答未実施」「C社ファイル受信応答未完了」といった字句が入ります。
+
+ここで「C社ファイル送信の未受信」という旨の条件にしてしまうと、C社から受信したI/Fファイルにエラーがあり、C社ファイル受信応答を返さないケースで販売再開がされなくなってしまうので不適切です。問題文内で、受信タイムアウトだけでなく、I/Fファイルのエラー検出時も在庫調整処理前のDBの状態で再開すると記述されていることに注意しましょう。
+
+一方、タイマイベント時点までに「通信がうまくいった」ときは特に何もする必要がありません。一般的なC言語などのプログラム言語では「else」を使って、先の条件式が成立しないときの処理を書くことができますが、やはり「図1中のメッセージ名称を用いた適切な字句を答えよ」という条件がついているため、ゲート条件[c]にうっかり「else」と書いてしまうと不正解になります（一般的にシーケンス図では「else」で済まさず、きちんとすべてのゲート条件を書きます）。したがって、[c]には[b]とは逆の記述、すなわち「C社ファイル受信回答済み」「C社ファイル受信回答完了」といった旨の字句が入ります。
+
+∴b＝C社ファイル受信回答未実施
+　c＝C社ファイル受信回答済み
+
+→
+タイムアウト処理は止めるわけではない。受信回答をした後にも動いている。
+受信回答後は、適切な処理が実行された後にタイムアウトになるわけだ。
+だから何もしなくていいのか。
+わかってみればあっけないが、何か異常がないか探している状態では、そういった可能性に気が付く事が出来ない。
+
+逆にC社からファイルが届かないって事は、ﾏｼﾞな障害なわけだから、そこは適切な回復処理を実行するってわけね。はいはい。
+
+
+[3]
+dについて〕
+表2の項番3は、D社の未販売チケットをC社に移動させる処理です。これをC社ファイル送信がエラーになる状態で実行すると、次の流れになります。
+1.C社側でD社のチケットをC社に移動する（C社増、D社減）
+2.C社のDBに反映させ、販売再開する
+3.C社ファイル送信エラー
+4.タイムアウト処理によりD社販売再開
+C社は在庫調整処理を実施してデータベース上の在庫を増やした後に販売を再開するのに対し、D社は更新情報を受け取ることができないため、在庫調整前のデータのまま販売を再開します。
+その結果、D社からC社に移動したはずの在庫情報がD社のデータベースに反映されず、移動対象となった公演のチケットがC社・D社の両方で「販売可能」状態となります。
+
+∴d＝販売可能
+
+〔eについて〕
+表2の項番4は、C社の未販売チケットをD社に移動させる処理です。これをC社ファイル送信がエラーになる状態で実行すると、次の流れになります。
+1.C社側でC社のチケットをD社に移動する（C社減、D社増）
+2.C社のDBに反映させ、販売再開する
+3.C社ファイル送信エラー
+4.タイムアウト処理によりD社販売再開
+C社は在庫調整処理を実施してデータベース上の在庫を減らした後に販売を再開するのに対し、D社は更新情報を受け取ることができないため、在庫調整前のデータのまま販売を再開します。
+その結果、C社からD社に移動したはずの在庫情報がD社のデータベースに反映されず、移動対象となった公演のチケットがC社・D社の両方で「販売不可」状態となります。
+
+→
+ロールバック処理が記述されていなかったので、在庫数がおかしくなることばかりに目が行ったが、当てはめる日本語がそれっぽくなかったので、うんうん悩んだのはここの部分。
+答えを見てみれば、在庫は関係なくて、販売可能か不可という答えだった。
+販売可否の視点は全く出てこなかったな。
+あー、そういうことか。
+数が合わなくなるのはそうだとしてその先か。
+販売会社が被るチケットが出てくるので、そのチケットがどちらのサイトでも販売される事態になるってことを言ってるのか。
+そりゃ気付かんわ。
+てか、問題文をよく見ると、「一部チケット在庫が」って言ってるので、ちゃんとヒントは出してるっぽいですね。
+これはやられましたわ。
+
+```
