--- a/AppliedInformation/午後/H28A.md
+++ b/AppliedInformation/午後/H28A.md
@@ -272,3 +272,61 @@ b 計測終了コマンドを送信
 補正中の値で計測したところで、正しい結果を求めることができないことくらいは何となくわかっていたが、
 それを「計測には不適切だから」という表現に落とし込むことが出来なかった。
 ```
+
+---
+
+## 情報システム開発 モジュール分割
+
+ワーニエとジャクソン、STSとTR、モジュール強度、全てあいまいなので、しっかり復習する。  
+それでも100点いけたと思ったのだが、最後の3問は全部ダメだった。  
+どちらかというと午前問題のきらいがあったな。  
+
+・モジュール分割  
+・モジュール結合度  
+
+``` txt : 26分 7/10
+イ
+ア
+オ
+
+施設名
+会員氏名
+
+月間の施設利用レポート出力処理 100%
+他)店ごとの施設利用レポート出力処理
+利用者なし表示出力処理 100%
+
+オ × ウ
+② × ④
+最多利用者情報出力処理とそれ以下の処理はすべて共通して利用しているため 0%
+→データ結合のモジュールに分割でき，再利用やカスタマイズが容易となるから
+
+---
+
+メモ
+
+共通機能は他の顧客でも使えるようにする。
+共通部分と他でも転用可能な境目を探せばいいってことか。
+
+---
+
+[4]
+モジュール結合度は12.システム開発技術を参照されたし
+
+[1]
+②の位置でモジュール分割する場合、上位のモジュールから下位のモジュールに対して＜施設名＞を受け渡し、下位モジュールでは指定された＜施設名＞をキーにして、施設利用実績データの集計を行うこととなります。パラメタを渡して、呼出し先モジュールの内部処理を制御するので制御結合となります。
+
+∴ウ：制御結合
+
+[2]
+まず、各施設で共通でない「最大同時利用者数出力処理」を共通モジュールに含めている①は論外です。残る②から④でモジュール結合度が最も低くなる分割点を考えます。
+②での分割は前述の通り制御結合です。③での分割も②と同様に、「利用者なし表示出力処理」のために＜施設名＞の受渡しが必要となるので制御結合です。④は集計したデータを幾つかのパラメタとして受け渡すだけで済むのでデータ結合となります。
+
+よって、モジュール結合度が最も低くなる④が開発方針に合致する分割点となります。
+
+∴④、データ結合のモジュールに分割でき，再利用やカスタマイズが容易となるから
+
+→  
+結局、一番独立性の高いデータ結合にするってんなら一番下しかないよねって話か。  
+
+```
