--- a/AppliedInformation/午後/H28S.md
+++ b/AppliedInformation/午後/H28S.md
@@ -39,3 +39,75 @@ VLAN20
 ---
 
 ## 組込みシステム開発 飲食店向けタッチ式注文端末
+
+---
+
+## 情報システム開発 通信販売用Webサイトにおける決済処理の設計
+
+ばちくそ設計の話でとても好感の持てる問題でした。  
+話も簡単で全問正解かと思いきや、2つも間違ってしまった。  
+それほど悩んではいないので、サラッと確認して終わりの問題。  
+
+``` txt : 24分 6/8
+配送センターに商品の発送を指示する
+他)配送センタへ商品の発送を指示する
+Webサイトで顧客に商品の発送を通知する
+他)顧客に商品の発送を通知する
+入金期限の期間内である
+他)入金期限を過ぎている
+入金期限を過ぎている
+他)入金期限を過ぎていない
+→よく見たらcとdの順番間違えてる。
+やべーやつだ。
+
+ウ × カ
+エ
+
+コンビニ支払、入金データ確認 × 決済番号取得、決済情報通知
+
+期限当日に入金した場合、期限外判定となり取消処理される 0%
+入金されている購入情報が取り消されてしまう
+→言いたいことあってるから部分点はもらえると思うけどな。
+
+---
+
+メモ
+
+期限内に入金したのに、先にチェックが走ったら期限外の判定になって購入が取り消されてしまう
+期限日に入金した場合に期限外判定になり購入が取り消されてしまうため
+
+---
+[2]
+
+〔eについて〕
+クレジット決済処理をまとめた表1を見ると、クレジットカードが決済完了した場合は「商品発送」を行うことになっており、この処理はクラス「クレジット購入情報」にあります
+。一方これと対になる処理として、カード利用不可であった場合に「再決済依頼」をする事になっていますが、図4のクラス図には記載されていません。
+したがって[e]には「再決済依頼」が入ります。
+
+∴e＝カ：再決済依頼
+
+
+[3]
+抽象操作（抽象メソッド）は、処理の内容が入っておらず、外部から呼び出すときのインタフェース、すなわち戻り値の型、メソッド名、引数の型、引数の数のみが定義されているメソッドです。抽象メソッドを1つ以上含むクラスは抽象クラスといいます。処理内容が定義されていないため、抽象クラスをインスタンス化することはできず、必ずサブクラスに継承してオーバーライドし、処理内容を確定する必要があります。
+オーバーライド（Override）
+上位クラスで定義されたメソッド(メンバ関数)を、下位クラス側の役割に応じて再定義し動作を変更すること
+図4のクラス図を見ると、クラス「決済」は「クレジット決済」と「コンビニ決済」の2クラスに継承され、それぞれでメソッド「決済手続」をオーバーライドしています。クラス「コンビニ決済」でオーバライドしたメソッド「決済手続」には、コンビニ決済固有の処理（すなわち、クレジット決済とは異なる処理）が入ります。なぜなら、仮に決済手続に関わる「クレジット決済」と「コンビニ決済」で共通の処理があるならば、「決済方法選択」のようにスーパークラスである「決済」側で処理を定義するべきだからです。
+
+コンビニの決済処理の処理内容が記載された表2には、「決済方法選択」「決済番号取得」「決済情報通知」「コンビニ支払」という4つの処理名称がありますが、このうち「決済方法選択」はクレジット決済と共通の処理であり、スーパークラスで定義済です。また「コンビニ支払」は、図1のアクティビティ図でもWebサイトの処理範囲外とされているように、顧客が行うものであってシステムは関与しません。したがって、残った「決済番号取得」及び「決済情報通知」がコンビニ決済クラスで実装すべき処理内容となります。
+
+∴決済番号取得，決済情報通知
+
+
+[4]
+改めて「入金データチェック処理」及び「入金期限チェック処理」の内容を簡単にまとめておきましょう。
+入金データチェック処理
+入金データを取り込み、その決済番号がWebサイトで保持している決済番号と一致し、該当の購入情報が取り消されていない場合に商品発送を行う
+入金期限チェック処理
+商品発送前かつ取消前の購入情報に対して、入金期限が過ぎていないかをチェックする
+以上を踏まえて解答するにあたっては、問題文に示された「日付が変わった後」という記述がヒントになります。仮に1月31日が入金期限日の注文について、その注文の料金支払いが1月31日の23時以降に行われたことを考えます（バッチ処理は1時間毎に行われるので）。日付が変わって2月1日になってからバッチ処理が実行される際、先に「入金期限チェック処理」を行ってしまうと、当該注文は「未発送かつ入金期限日を過ぎている」と判断され、（顧客は入金期限日内に支払いをしていたにも関わらず）購入取消の処理が進められてしまいます。これが、処理順の先後によって生じる不具合です。
+
+逆に「入金データチェック」を先に行えば、入金確認→商品発送の手続きで発送済となり入金期限チェックの対象から外れるため、購入が取り消されることはありません。
+
+∴入金されている購入情報が取り消されてしまう
+
+```
