--- a/AppliedInformation/午後/H30A.md
+++ b/AppliedInformation/午後/H30A.md
@@ -174,3 +174,46 @@ t1秒経過して開錠処理が開始されてから１秒以内に扉を開け
 →
 「①施錠する」処理中に扉を開き、そのままt2秒経過したとき
 ```
+
+---
+
+## 情報システム開発 継続的インテグレーション
+
+問題を覚えていたのでスラスラ解けた。  
+1つナチュラルに間違った奴があるので、それだけ復習すれば後は十分かな。  
+最後の問題に関しては言いたいことはわかっていた。  
+表現の問題として片付けたい。部分点をもらえる自信はある。  
+
+``` txt : 20分 7/9 実質8
+イ
+エ
+オ
+
+リグレッションテスト
+エ × ア
+
+false
+
+エ
+異常が発生した場合、担当したチームにのみメールが送信されるようにする 0%
+他)各アプリケーションの担当チームだけにメールするようにする
+ビルドと単体テスト間のフォークとジョインを廃止してそれぞれ単体テストまで流す 0%
+→各アプリケーションのビルド終了後、待ち合わせせず単体テストに移る
+
+---
+
+[2]
+"既存機能に対するテスト"では、機能変更・機能追加された部分だけでなく、追加・変更された機能とは直接関係ない部分も含めて網羅的に再テストを実施します。
+当然ですが、アプリケーションの規模が大きくなれば、それだけテストしなければいけない部分も増えるため、テストケース数は増加します。
+アプリケーションの規模はステップ数で表されますから、"既存機能に対するテスト"のテストケース数は、アプリケーションのステップ数と密接な関連があります。
+
+ステップ数に対するテストケース数をテスト密度といいます。
+テスト密度は、テストケース数を設定する際の参考値や、テストの十分性評価等に使用できます。
+IPAの「ソフトウェア開発データ白書」等の資料では、テスト密度の統計が公表されているため、初めてCIツールを導入する場合でも、これらを参考にテストケースの数が妥当であるかどうかを評価することができます。
+
+したがって、テストケース数の妥当性を評価するために考慮すべき値は、アプリケーションのステップ数になります。
+他の選択肢は、追加・変更された部分の大きさと関連する値ばかりなので誤りです。
+
+∴ア：アプリケーションのステップ数
+
+```
