--- a/AppliedInformation/午後/H30S.md
+++ b/AppliedInformation/午後/H30S.md
@@ -247,3 +247,54 @@ b : 登録周期
 
 ∴登録周期の変更
 ```
+
+---
+
+## 情報システム開発 プログラムの品質評価
+
+あかん。簡単だったけど、めっちゃ基本的なところ間違えた。  
+なんとなくでやってきたツケが回ってきた感じなので、まじでやらないとダメそうですね。  
+
+``` txt : 17分 7/8
+2
+ホワイトボックステスト
+判定条件網羅 × 条件網羅
+
+リファクタリング
+
+┌○┐
+│  │
+ ↳○↲
+こんな感じのやつ
+
+5
+
+カ
+3か月おきに継続的な改修をしていくことが想定されているため 100%
+他)プログラムの改修や修正が継続的に発生することが想定されるから
+
+---
+
+[1][3]
+命令網羅(網羅性:低い↑)
+すべての命令を少なくとも1回は実行するテストケースを設計する。
+
+分岐網羅(判定条件網羅)
+判定条件の真偽を少なくとも1回は実行するテストケースを設計する。
+
+条件網羅
+判定条件が複数ある場合に、それぞれの条件の真・偽を少なくとも1回は実行するテストケースを設計する。
+
+判定条件・条件網羅
+判定条件網羅と条件網羅を組み合わせたテストケースを設計する。
+
+複数条件網羅(網羅性:高↓)
+判定条件のすべての可能な結果の組合せを網羅し、かつ、すべての命令を少なくとも1回は実行するようにテストケースを作成する。
+
+本文中には「個々の判定条件の真及び偽の組合せを満たす」と説明されており、この記述の「個々の」の部分から条件網羅であると判断できます。
+
+※もし方針が複数条件網羅ならば「判定条件の全体として考え得る全ての組合せを満たす」というような説明になるはずです。
+例えば2つの判定条件があるとして、条件網羅であれば「真，真」「偽、偽」という2つで個々の条件の真偽の組合せを網羅できますが、複数条件網羅では「真，真」「真，偽」「偽，真」「偽，偽」という4つを用意しなければなりません。
+個々の判定条件の真偽の組合せを満たしただけでは複数条件網羅とはならないことがわかります。
+
+```
