--- a/BasicInformation/午前/1.テクノロジ系/13.ソフトウェア開発管理技術.md
+++ b/BasicInformation/午前/1.テクノロジ系/13.ソフトウェア開発管理技術.md
@@ -145,7 +145,7 @@ XPでは、完成したコードでも随時または定期的に改善を行い
 #### 開発者（開発チーム）
 
 実際に開発を行うチームのことで、開発者たちを指す。  
-ビジネスアナリスト、プログラマー、テスター、アーキテクト、デザイナーなどの機能横断的な様々な技能を持った人がプロダクトを中心に集まり、自律的に行動する。  
+ビジネスアナリスト、プログラマー、テスター、アーキテクト、デザイナーなどの機能横断的な様々な技能を持った人がプロダクトを中心に集まり、**自律的**に行動する。  
 開発チームはバックログに入っている項目を完了状態にし、プロダクトの価値を高めていくことに責任を持つ。  
 
 ・各スプリントの終わりにプロダクトインクリメントのリリースの可否を判断する。  
@@ -157,6 +157,7 @@ XPでは、完成したコードでも随時または定期的に改善を行い
 スクラム全体をうまく回すことに責任を持つ。  
 
 ・スクラムの理論とプラクティスを全員が理解するように支援する。  
+※ファシリテーター（英語: facilitator）: 促進者を意味する言葉である。会議などの進行を司る役割などもこれに含まれる。  
 
 ### バーンダウンチャート
 
@@ -168,6 +169,69 @@ XPでは、完成したコードでも随時または定期的に改善を行い
 バーンダウンチャートを作成することによって、プロジェクトの明確な進捗状況をチーム内で共有できるため、適切な対策を適切なタイミングで実施できるようになる効果があります。  
 
 ![!](https://www.ap-siken.com/kakomon/03_aki/img/49.gif)  
+
+### インスペクション(Inspection)
+
+モデレータが全体のコーディネートを行い，参加者が明確な役割をもってチェックリストなどに基づいたコメントをし，正式な記録を残す。
+Inspection:検査、監視
+事前に役割を決められた参加者が責任のある第三者(モデレータ)の下で成果物を確認する、最も公式なレビュー技法です。
+
+通常3人から6人が参加して実施され、各参加者は、モデレータ、オーナ、インスペクタ、プレゼンタ、スクライブなどの役割を持ちます。
+
+他のレビュー法と比較したときのインスぺクションの特徴は以下の3点です。  
+
+1.参加者の役割が明確になっていること  
+2.チェックリストなど形式的な文書に基づいて実施すること  
+3.レビュー記録を正式な形で残すこと  
+
+ウォークスルーと似ているが、「モデレータ」および「参加者が明確な役割を持って」などのキーワードがあったらインスペクション。  
+
+#### モデレータ(Moderator)
+
+議長・司会としてインスペクション全体を運営する。
+
+#### オーナー(Owner)
+
+レビュー対象となる成果物の作成者で、発見された問題に応じて成果物の修正を行う。
+
+#### インスペクタ(Inspector)
+
+評価者としてレビュー対象となる成果物の問題発見を行う。
+
+#### プレゼンタ(Presenter)
+
+ミーティングにて参加者に資料の説明を行う。
+
+#### スクライブ(Scribe)
+
+書記としてレビューで発見された問題などを記録する。
+
+### パスアラウンド
+
+レビュー対象となる成果物を複数のレビュアに配布又は回覧して，レビュアがコメントをする。
+
+### ウォークスルー
+
+開発者が主体となりエラーの早期発見を目的としてプログラムのステップごとにシミュレーションを行いながら確認をしていくレビュー技法です。  
+
+開発者が主体となりエラーの早期発見を目的として設計書やプログラムに誤りがないかを確認するレビュー手法です。  
+開発メンバで実施されることが多く、原則的に管理者には参加させないという特徴があります。  
+
+作成者を含めた複数人の関係者が参加して会議形式で行う。  
+レビュー対象となる成果物を作成者が説明し，参加者が質問やコメントをする。  
+
+### ラウンドロビン
+
+参加者が順番に司会者とレビュアになる。  
+司会者の進行によって，レビュア全員が順番にコメントをし，全員が発言したら，司会者を交代して次のテーマに移る。  
+
+### ピアレビュー(Peer Review)
+
+「ピア(peer)」には同僚という意味があり、ドキュメントやコーディング作業が終了したソースコードに対して、
+作成者の同僚や研究仲間など立場の近いもの同士が実施しあうレビューのことをいいます。  
+成果物の品質や生産性の向上、及びチーム内での知識共有を促進することを目的として実施され、  
+「欠陥の有無」や「コーディング規約の遵守」「仕様書の内容が反映されているか」などが検証されます。  
+代表的な手法としてインスペクション、チームレビュー、ウォークスルー、パスアラウンド、ピアデスクチェック、アドホックレビューなどがあります。  
 
 ---
 
