--- a/AppliedInformation/午後/H29A.md
+++ b/AppliedInformation/午後/H29A.md
@@ -305,7 +305,7 @@ pm07_5.gif/image-size:400×118
 このテストでよかったのは、昔と比べてテキパキと論理式を書いて結論をまとめられたことだろうか。  
 昔ならグダグダ説明してた気がする。  
 
-``` txt
+``` txt : 20分くらい 6/8
 (100,100),(60,100),(60,70),(100,30)
 
 30
