--- a/勉強したいことリスト.md
+++ b/勉強したいことリスト.md
@@ -321,6 +321,14 @@ LINQ OrderBy 複数
 
 原簿
 
+
+[C言語でTCPソケットを使ってechoサーバーを実装してみた](https://reboooot.net/post/implement-tcp-echo-server/)
+[正規表現まとめ ＋ メールアドレスとURLの正規表現例](https://qiita.com/str32/items/a692073af32757618042)  
+[SQL Serverで、SELECT結果でUPDATEする方法](https://sqlazure.jp/r/sql-server/403/)
+[SELECT結果からのUPDATE文](https://pg.4696.info/db/mssql/sqlserver-sql.html)
+[Git で「追跡ブランチ」って言うのやめましょう](https://qiita.com/uasi/items/69368c17c79e99aaddbf)
+
+
 ---
 
 ## 現在進行形
