--- a/AppliedInformation/午後/H26A.md
+++ b/AppliedInformation/午後/H26A.md
@@ -458,3 +458,103 @@ pm07_6.gif/image-size:413×146
 ∴6
 
 ```
+
+---
+
+## 情報システム開発 ソフトウェアのテスト
+
+やっててうちのテストを思い出した。  
+結合テストが結合テストしてないんだよな。  
+というか、結合テストの意味はき違えてやってるだろ。  
+まぁ、愚痴はいいや。  
+
+あまり解けた自信はなかったが、まぁそれなりに正解したのでよかったかなって感じ。  
+
+``` txt : 30分 6/8
+ア，イ，ウ
+エ、オ
+
+ア、ウ × ア、オ
+基準と比べてテスト項目数が足りない 100%
+他)テスト項目が目標値よりも少ない
+単体テスト中に修正を行った後、回帰テストを行っていない 100%
+他)メイン機能修正後に回帰テストを行っていない
+
+出荷管理
+出荷管理の欠陥件数が計上されていないため 0%
+→累積欠陥密度がUCLを超えるから
+
+---
+
+ところでステップ数ってなんだ。
+
+ステップ数とは、コンピュータプログラムの規模を測る指標の一つで、何らかの意味のある処理を行っているソースコードの行数のこと。
+ソフトウェア開発の際の規模の見積もりや進捗管理などのために用いられることが多い。
+
+基準と比べてテスト項目数が足りない
+テスト項目数は最低でも550件は必要
+
+---
+
+[2]
+ユニットごとの単体テスト実施結果を、管理図を使用して分析し、適切な判断ができるかどうかを問う問題です。
+
+管理図は「QC7つ道具」の一つで、計測した数値データをグラフ上にプロットし、値がUCL（上部管理限界）とLCL（下部管理限界）の間に収まっているか、通常と異なる変化が出ていないかなどを調べることで異常の有無を判別する手法です。一般的な管理図では横軸を時系列にして、時間経過に伴う計測値の変化を分析することが多いですが、図1の管理図は横軸がユニットIDになっていて、欠陥密度を（時間変化ではなく）ユニット同士で比較する図になっていることに注意が必要です。
+
+ア
+正しい。管理図では基本的に、計測値がUCLからLCLの範囲に収まらないとき、なんらかの異常が生じていると考えるため、UCLを上回るP1はさらなる調査が必要なユニットです。
+
+イ
+誤り。P2・P3・P5・P8はUCLからLCLの範囲（管理限界）に収まってはいますが、その結果をもって品質を保証することはできません。
+テストケースの品質が悪く、欠陥が摘出されていない場合もあるためです。
+
+ウ
+誤り。P4・P9の欠陥密度はLCLを著しく下回っているため、「欠陥が少なく品質が高い」ではなく、むしろ「テストが不十分で欠陥が見つけられていない」可能性を疑うべきです。
+
+柄
+誤り。UCLを超えたということは、その時点で何らかの異常が生じていると見るべきで、この状況を放置して結合テストに進むのは不適切です。
+前工程での異常は後工程でさらに広がる傾向があるためです。
+
+オ
+正しい。P7はLCLを下回る欠陥密度であるため、十分なテストが行えるようにテスト項目の精査を行うべきです。
+
+∴ア，オ
+
+→
+やっぱり範囲内だから、範囲以下だから、品質が大丈夫とかいうわけではないんだな。
+文中に品質って文言を出されたからそれに引っ張られたけど違和感はすごかったんだよな。
+
+LCL以下→十分なテストが行われているか？
+LCL以内→まぁ、妥当なテストしてるんじゃないかな。
+LCL以上→そもそも多すぎるのでどうなっているのかインタビューする
+
+こんなところか？
+
+
+[3]
+
+〔結合テストの実施と欠陥発生状況の分析〕の中に「表3のインタフェース誤りは，全て受注管理から出荷管理へのデータ連携テストで検出されたもので，全て双方のコンポーネントのユニットに修正が必要な欠陥であったが，欠陥件数は，データの送出側である受注管理だけに計上していた。」という記述があります。
+つまり、表3に記載されているインタフェース誤り（12件）は、受注管理だけでなく出荷管理にも欠陥件数として計上すべきものであることがわかります。
+
+具体的に出荷管理で増加する欠陥密度を計算してみると、出荷管理のステップ数は表1より「20,000ステップ＝20kステップ」なので、
+
+　12件÷20kステップ＝0.6件／kステップ
+
+が上乗せされる欠陥密度とわかります。
+
+次に、図2から出荷管理の累積欠陥密度（11/3時点）を調べると、ちょうどLCL（1.2件／kステップ）の上に位置しています。
+これに先ほど求めた欠陥密度を上乗せすると1.8件／kステップになり、UCL（1.7件／kステップ）を超えることになります。
+つまり、出荷管理コンポーネントについても問題があると考えられます。
+
+したがって、管理図分析の結果として問題があると考えられるコンポーネントは「出荷管理」、その理由は「累積欠陥密度がUCLを超えるから」となります。
+
+∴コンポーネント：出荷管理
+　理由：累積欠陥密度がUCLを超えるから
+
+→
+一番最後の問題は一番上にヒントがかかれている法則。
+欠陥件数が計上されていないからは第一段階の答えでしかない。
+もう一押し必要で、そっからステップ数を求めて、LCUを超えることを指摘しないと満点はもらえない模様。
+まぁ、それでも部分点もらえるなら俺は満足だけどねぇ。
+
+```
