--- a/AppliedInformation/午後/H26S.md
+++ b/AppliedInformation/午後/H26S.md
@@ -149,3 +149,64 @@ A.船便番号,A.船便名,C.座席クラス番号,C座席クラス名
 ---
 
 ## 組込みシステム
+
+---
+
+## 情報システム開発 地図を利用するアプリケーションプログラムの設計
+
+もっと正解できる問題だったが、結構認識に抜けが合って正答率を下げてしまった。  
+応えているときにふんわりした手ごたえだと、それなりに間違えるのは当たり前か。  
+解説を読んでみると、文中にそれなりのヒントが散りばめられているので、まじで問題文を読む練習というか、  
+応用特有の読み方を徹底しないといけないなーって思う。  
+
+とはいいつつ、全体的に難しいことは無かったので、解きやすかった部類ではある。
+
+``` txt : 28分 5/9 実質6
+1
+1
+住所
+属性クラス × 位置
+操作盤、画像 × 位置緯度、位置経度
+
+メールを作成する画面へ × - メールを作成する画面へ
+→反例に習っていなかった。privateを明記しないといけなかった。
+定義だけが定められており、処理は記述されていない 100%
+他)操作の定義だけ行われ、実装は行われない
+
+アイコンの要素数 × アイコンリストの大きさ
+
+操作盤           地図
+||   操作盤を描く ||
+|| ←────── ||
+|| ------------→ ||
+
+---
+
+[1][3]
+基本データ型を用いていること、地図クラスとアイコンクラスに共通する属性、複数の関連する属性という記述から、属性"位置緯度"と"位置経度"についての指摘であることがわかります。
+
+緯度と経度は2つ合わせて1つの情報という側面があるので、2つの情報をまとめて管理するクラスを作り、値のチェック（緯度であれば-90≦0≦90、経度であれば-180≦0≦180）などを加えた方が堅牢なシステムとなります。クラス名としては"位置"、最低限持つべき属性としては"緯度"と"経度"が適切です。
+
+∴クラス：位置
+　属性：位置緯度，位置経度
+
+→
+あーそういうことね。
+ちょっと何言ってるかわからなかったけど、そういうことね。
+プリミティブ型を使ってこういう意味で使ってるよって情報があるからそれをクラスとしてまとめろ。
+操作盤とアイコンはそうしてるだろって事か。
+
+
+[3]
+〔eについて〕
+シーケンス図では以下の書式で繰返し処理を記述できます。
+pm08_5.gif/image-size:301×113
+図3を見ると"アイコンを描く"がループ処理になっています。拡大ボタンが押された場合、地図上の全ての要素を再描画する必要があるので、地図クラスが保持するアイコンごとに"アイコンを描く"操作を呼び出すことになります。地図上のアイコン数は地図クラスの属性"アイコンリスト"のサイズを参照すればわかるので、1から「アイコンリストの大きさ」まで当該処理を繰り返すことになります。
+
+∴アイコンリストの大きさ
+→
+アイコンリストの文言は必要だったな。
+ただ、要素数ってところは部分点もらえそうな気がするけどなぁ。
+
+
+```
