--- a/AppliedInformation/午後/H28A.md
+++ b/AppliedInformation/午後/H28A.md
@@ -314,13 +314,16 @@ b 計測終了コマンドを送信
 モジュール結合度は12.システム開発技術を参照されたし
 
 [1]
-②の位置でモジュール分割する場合、上位のモジュールから下位のモジュールに対して＜施設名＞を受け渡し、下位モジュールでは指定された＜施設名＞をキーにして、施設利用実績データの集計を行うこととなります。パラメタを渡して、呼出し先モジュールの内部処理を制御するので制御結合となります。
+②の位置でモジュール分割する場合、上位のモジュールから下位のモジュールに対して＜施設名＞を受け渡し、下位モジュールでは指定された＜施設名＞をキーにして、施設利用実績データの集計を行うこととなります。
+パラメタを渡して、呼出し先モジュールの内部処理を制御するので制御結合となります。
 
 ∴ウ：制御結合
 
 [2]
 まず、各施設で共通でない「最大同時利用者数出力処理」を共通モジュールに含めている①は論外です。残る②から④でモジュール結合度が最も低くなる分割点を考えます。
-②での分割は前述の通り制御結合です。③での分割も②と同様に、「利用者なし表示出力処理」のために＜施設名＞の受渡しが必要となるので制御結合です。④は集計したデータを幾つかのパラメタとして受け渡すだけで済むのでデータ結合となります。
+②での分割は前述の通り制御結合です。
+③での分割も②と同様に、「利用者なし表示出力処理」のために＜施設名＞の受渡しが必要となるので制御結合です。
+④は集計したデータを幾つかのパラメタとして受け渡すだけで済むのでデータ結合となります。
 
 よって、モジュール結合度が最も低くなる④が開発方針に合致する分割点となります。
 
