--- a/AppliedInformation/午後/H28S.md
+++ b/AppliedInformation/午後/H28S.md
@@ -77,7 +77,10 @@ Webサイトで顧客に商品の発送を通知する
 期限日に入金した場合に期限外判定になり購入が取り消されてしまうため
 
 ---
+
 [2]
+
+[e]はクラス「クレジット購入情報」のメソッド名、[f]はクラス「コンビニ購入情報」のメソッド名です。両クラスは共にクラス「購入情報」の子クラス（派生クラス）になっている事から、[e]と[f]は購入手続きに関わる処理のうち、クレジット購入時とコンビニ購入時それぞれに固有の処理であることがわかります。
 
 〔eについて〕
 クレジット決済処理をまとめた表1を見ると、クレジットカードが決済完了した場合は「商品発送」を行うことになっており、この処理はクラス「クレジット購入情報」にあります
@@ -86,16 +89,41 @@ Webサイトで顧客に商品の発送を通知する
 
 ∴e＝カ：再決済依頼
 
+→
+決済情報通知にしたのは、前の問題でそう答えた奴があったからな気がするなぁ。
+入金データチェックのアクティビティでそう答えたからだ。
+でも、これはコンビニ決済の話であってクレジットカードではなさそうなので、確かに間違って正解だなって思った。
+ようやく納得が行きました。
+
 
 [3]
+
 抽象操作（抽象メソッド）は、処理の内容が入っておらず、外部から呼び出すときのインタフェース、すなわち戻り値の型、メソッド名、引数の型、引数の数のみが定義されているメソッドです。抽象メソッドを1つ以上含むクラスは抽象クラスといいます。処理内容が定義されていないため、抽象クラスをインスタンス化することはできず、必ずサブクラスに継承してオーバーライドし、処理内容を確定する必要があります。
+
 オーバーライド（Override）
 上位クラスで定義されたメソッド(メンバ関数)を、下位クラス側の役割に応じて再定義し動作を変更すること
-図4のクラス図を見ると、クラス「決済」は「クレジット決済」と「コンビニ決済」の2クラスに継承され、それぞれでメソッド「決済手続」をオーバーライドしています。クラス「コンビニ決済」でオーバライドしたメソッド「決済手続」には、コンビニ決済固有の処理（すなわち、クレジット決済とは異なる処理）が入ります。なぜなら、仮に決済手続に関わる「クレジット決済」と「コンビニ決済」で共通の処理があるならば、「決済方法選択」のようにスーパークラスである「決済」側で処理を定義するべきだからです。
 
-コンビニの決済処理の処理内容が記載された表2には、「決済方法選択」「決済番号取得」「決済情報通知」「コンビニ支払」という4つの処理名称がありますが、このうち「決済方法選択」はクレジット決済と共通の処理であり、スーパークラスで定義済です。また「コンビニ支払」は、図1のアクティビティ図でもWebサイトの処理範囲外とされているように、顧客が行うものであってシステムは関与しません。したがって、残った「決済番号取得」及び「決済情報通知」がコンビニ決済クラスで実装すべき処理内容となります。
+図4のクラス図を見ると、クラス「決済」は「クレジット決済」と「コンビニ決済」の2クラスに継承され、それぞれでメソッド「決済手続」をオーバーライドしています。
+クラス「コンビニ決済」でオーバライドしたメソッド「決済手続」には、コンビニ決済固有の処理（すなわち、クレジット決済とは異なる処理）が入ります。
+なぜなら、仮に決済手続に関わる「クレジット決済」と「コンビニ決済」で共通の処理があるならば、「決済方法選択」のようにスーパークラスである「決済」側で処理を定義するべきだからです。
+
+コンビニの決済処理の処理内容が記載された表2には、「決済方法選択」「決済番号取得」「決済情報通知」「コンビニ支払」という4つの処理名称がありますが、このうち「決済方法選択」はクレジット決済と共通の処理であり、スーパークラスで定義済です。
+また「コンビニ支払」は、図1のアクティビティ図でもWebサイトの処理範囲外とされているように、顧客が行うものであってシステムは関与しません。
+したがって、残った「決済番号取得」及び「決済情報通知」がコンビニ決済クラスで実装すべき処理内容となります。
 
 ∴決済番号取得，決済情報通知
+
+→
+思いっきり客が操作する内容も答えに含めていた。
+考えるのはあくまでシステムで行う事か。
+そう考えれば、消去法で残った奴のみって事になるかね。
+
+決済するときに、その番号を取得する。
+決済が確認出来たらデータを生成する。
+データの存在が確認出来たら通知を行う。
+普通に考えればこの流れ。
+しかし、仕様書ばかりに目を通していると、そういうのを考える余裕がなくなる。
+そういうわけだ。
 
 
 [4]
