--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -376,6 +376,17 @@ ASPを知るためにはMVCとMVVMも改めて確認しないとなぁ。
 
 ---
 
+## 抽象操作（抽象メソッド）
+
+処理の内容が入っておらず、外部から呼び出すときのインタフェース、すなわち戻り値の型、メソッド名、引数の型、引数の数のみが定義されているメソッドです。  
+抽象メソッドを1つ以上含むクラスは抽象クラスといいます。処理内容が定義されていないため、抽象クラスをインスタンス化することはできず、必ずサブクラスに継承してオーバーライドし、処理内容を確定する必要があります。  
+
+## オーバーライド（Override）
+
+上位クラスで定義されたメソッド(メンバ関数)を、下位クラス側の役割に応じて再定義し動作を変更すること  
+
+---
+
 ## MVC(Model View Controler)
 
 ### なぜMVCは廃れたのか
@@ -608,6 +619,28 @@ DNSで名前解決の時に使うあれ。
 ・binとobjを削除する必要があった模様。
 ・フォルダに追加するだけだと認識されない。
 ・その場合はすべて表示にして、右クリックして追加する。
+
+---
+
+[ディレクトリ構成図を書くときに便利な記号](https://qiita.com/paty-fakename/items/c82ed27b4070feeceff6)
+
+``` txt
+読み          文字
+
+たて        : │ ┃
+たてひだり  : ┨ ┥ ┤ ┫
+たてみぎ    : ┣ ┠ ┝ ├
+ひだりうえ  : ┌ ┏
+ひだりした  : └ ┗
+ふとわく    : ┗┻━┛ ┏┳━┓
+ほそわく    : └┴─┘ ┌┬─┐
+まんなか    : ┼ ╋ ┿ ╂
+みぎうえ    : ┐ ┓
+みぎした    : ┘ ┛
+よこ        : ─ ━
+よこうえ    : ┻ ┷ ┸ ┴
+よこした    : ┳　┯ ┰ ┬
+```
 
 ---
 
