--- a/AppliedInformation/午後/H25A.md
+++ b/AppliedInformation/午後/H25A.md
@@ -290,3 +290,75 @@ itec解説
 ∴端末Bが他の端末と通話するために接続を試みているとき
 
 ```
+
+---
+
+## 情報システム開発 ソフトウェアの機能規模の見積り
+
+この問題覚えてるわ。  
+2回目の試験でやったときはボロボロだった気がする。  
+今回はほとんど出来た。  
+この問題は1回でも間違えると全部だめになるタイプだった。  
+知識ではなく、問題文から読み取る系の問題なので、特に解説すえる事は無く、ミスリードがなかったかどうか程度で十分かな。  
+
+``` txt : 30分 10/11
+開発において使用するプログラム言語の選定基準になるため 100%
+他)開発に持ちいるプログラム言語に依存しない見積もりが行えること
+→よく見たらだめじゃね？
+
+EIF
+ILF
+10 × 8
+EO
+
+0
+1
+5
+1
+58
+46.4
+
+---
+
+[1]
+問題文冒頭部に、K社では開発に複数のプログラム言語を用いているという記述があります。
+ソフトウェア規模を見積もる方法としては、古くからプログラムステップ法（LOC法）という方法がありますが、この見積り法は名前の通りソースコードの行数を基準にソフトウェア規模を推計する方法なので、開発に用いるプログラム言語によってソフトウェア規模が変わってしまうことになります。
+※同じ処理を実装する場合でも、プログラム言語によってソースコードの行数が大きく異なることがあります。
+
+ファンクションポイント法は、外部入出力や内部ファイルの数と難易度の高さから論理的にファンクションポイントを算出し、それを基に開発規模を見積もる手法なので、どのプログラム言語を採用したとしても算出される開発規模は同じになります。
+開発プロジェクトのコストやスケジュール等は見積もられた開発規模によって決まるので、見積りの正確さは、開発プロジェクトの成否に大きな影響を及ぼします。
+したがって、開発に用いるプログラム言語に依存せずに見積りが行えることは、K社にとってのメリットとなります。
+
+∴開発に用いるプログラム言語に依存しない見積りが行えること
+
+
+[2]
+〔aについて〕
+表4はデータファンクションの一覧ですので、表3でデータファンクションに分類されているILF、EIFのいずれかが入ります。
+図1のDFDを見ると、"入庫指示"は生産管理システムから出力されるデータであることがわかります。
+入庫管理システムでは"入庫処理"にて"入庫指示"の参照だけを行い、作成・更新・削除をすることはないので、外部インタフェースファイルを表す「EIF（External Interface File）」が適切です。
+
+∴a＝EIF
+
+〔bについて〕
+こちらもILF、EIFのいずれかが入ります。
+図1のDFDを見ると、"在庫"は"入庫処理"により作成・更新され、"実績集計"・"数量照会"・"金額照会"の3つのトランザクションファンクションによって参照されていることがわかります。入庫管理システムによって、作成・更新・参照・削除されるデータなので、内部論理ファイルを表す「ILF（Internal Logical File）」が適切です。
+
+∴b＝ILF
+
+〔cについて〕
+まず、データ項目数の積算ルールについて整理します。
+見出しや定数項目などの固定値項目を除く
+アプリケーションに出入りする可変なデータ項目である
+同じデータ項目が複数回繰り返し表示される場合は最初の1回とする
+データストアの一つの項目が，画面設計の都合によって複数の表示項目に分割される場合も，データ項目数は1とする
+ボタンなどの処理のトリガは，まとめて1つとする
+各種メッセージについても，まとめて1つとする
+このルールに則りデータ項目の個数を数えると、入庫登録のデータ項目数は以下の8つとなります。
+
+https://www.ap-siken.com/kakomon/25_aki/img/pm07_6.gif
+
+→
+日付のところを1つずつ数えていましたが、ルール4だと1つとカウントする見たいなので、そこで食い違った見たいです。
+確かに複数の表示項目に分割されているので、1つと数えるのかもしれないですね。
+```
