--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -701,6 +701,14 @@ READ UNCOMMITTED
 
 ---
 
+## RPXで○○様ってつけたい
+
+``` txt
+= DataField + "様"
+```
+
+---
+
 ## 著作権
 
 <https://cozylaw.com/copyright/ippun/>  
@@ -754,20 +762,3 @@ avalon peninsula canada
 ・クエリエラー調査
 DISTINCTとワイルドカード `*` を併用したら.NETFrameworkで実行速度が遅くなるらしい
 
-
-
-
-マジで30分前就寝がやばすぎる。
-朝のすっきり具合が全然違う。
-30分でここまで人生変わるとは・・・。
-やはり時間は偉大なり。
-
-
-新機能の実装は久しぶりなので、若干の楽しみはあるが、それを打ち消すほどに劣悪な開発環境なので素直に喜べない。
-どうせまたガミガミ言われてグダグダになるのがオチだな。
-
-
-昨日で6問消化。
-25年も含めれば16問あるので、余裕を持って情シスを消化できるな。
-今日はアジャイルの復習と午前問題で終わるだろう。
-それくらいできるだけでも十分なきがする。
