企業計算、gitトラブル

--- a/BasicInformation/午前/3.ストラテジ系/6.企業活動.md
+++ b/BasicInformation/午前/3.ストラテジ系/6.企業活動.md
@@ -778,6 +778,232 @@ N＝2050
 
 ---
 
+## 計算問題まとめ
+
+### 平成28年秋期　問76
+
+今年度のA社の販売実績と費用(固定費，変動費)を表に示す。来年度，固定費が5%上昇し，販売単価が5%低下すると予測されるとき，今年度と同じ営業利益を確保するためには，最低何台を販売する必要があるか。  
+
+![!](https://www.ap-siken.com/kakomon/28_aki/img/76.gif)  
+
+``` txt
+営業利益は「売上高－変動費－固定費」で計算できるので、この式に今年度の数値を当てはめると、今年度の営業利益は
+
+　2,500×200－2,500×100－150,000
+＝500,000－250,000－150,000
+＝100,000(千円)
+
+来年度は固定費が5％上昇し「150,000千円×(1＋0.05)＝157,500千円」に、販売単価が5％低下し「200千円×(1－0.05)＝190千円」になるという予測なので、販売台数を文字Nとして関係式を作り、今年度と同じ営業利益を得るために必要な販売台数を求めます。
+
+　100,000≧190×N－100×N－157,500
+　100,000≧90N－157,500
+　90N≧257,500
+　N≧2861.11…(台)
+
+不等式の解より、最低限必要な販売台数は「2862台」であるとわかります。
+```
+
+### 平成29年秋期　問75
+
+本社から工場まで車で行くのに，一般道路では80分掛かる。高速道路を利用すると，混雑していなければ50分，混雑していれば100分掛かる。高速道路の交通情報が"順調"ならば高速道路を利用し，"渋滞"ならば一般道路を利用するとき，期待できる平均所要時間は約何分か。ここで，高速道路の混雑具合の確率は，混雑している状態が0.4，混雑していない状態が0.6とし，高速道路の真の状態に対する交通情報の発表の確率は表のとおりとする。
+
+![1](https://www.ap-siken.com/kakomon/29_aki/img/75.gif)  
+
+"混雑"・"混雑していない"という高速道路の真の状態に対して、それぞれ"渋滞"・"順調"の2通りの交通情報が出される可能性があります。つまり、以下の4つのケースが考えられます。
+真の状態が"混雑している"で、交通情報が"渋滞"である
+真の状態が"混雑している"で、交通情報が"順調"である
+真の状態が"混雑していない"で、交通情報が"渋滞"である
+真の状態が"混雑していない"で、交通情報が"順調"である
+それぞれの発生確率とその際に選択される道路を整理すると以下のようになります。
+
+![1](https://www.ap-siken.com/kakomon/29_aki/img/75a.gif)  
+
+後は各ケースの所要時間を発生確率で重み付けして平均所要時間を求めるだけです。
+
+　80×0.36＋100×0.04＋80×0.12＋50×0.48
+＝28.8＋4＋9.6＋24
+＝66.4(分)
+
+### 令和元年秋期　問77
+
+損益分岐点分析でA社とB社を比較した記述のうち，適切なものはどれか。
+
+![1](https://www.ap-siken.com/kakomon/01_aki/img/77.gif)  
+
+損益分岐点分析で使用される主な指標とその計算式は以下の通りです。
+
+損益分岐点売上高
+売上高と費用の合計が等しく利益が0となる売上高を示す。
+●固定費÷(1－変動費率)
+
+損益分岐点比率
+実際の売上高に対する損益分岐点の割合を示し、この値が低いほど収益性が高く、かつ売上減少に耐える力が強いことを意味する。
+●損益分岐点売上高÷売上高×100
+
+安全余裕率
+実際の売上高と損益分岐点の差がどれくらいあるかを示し、この値が高いほど経営に余裕があることを意味する。
+●(売上高－損益分岐点売上高)÷売上高×100
+
+限界利益率
+売上高に対する限界利益の割合を示す。
+●(売上高－変動費)÷売上高×100
+
+これを踏まえて各記述の正誤を判断していきますが、前提として両者の損益分岐点売上高だけは先に求めておきます。
+
+[A社]
+変動費率＝800÷2,000＝0.4
+損益分岐点売上高＝900÷(1－0.4)＝1,500
+
+[B社]
+変動費率＝1,400÷2,000＝0.7
+損益分岐点売上高＝300÷(1－0.7)＝1,000
+
+ア. 安全余裕率はB社の方が高い。
+正しい。
+[A社]
+　(2,000－1,500)÷2,000
+＝500÷2,000＝0.25＝25%
+[B社]
+　(2,000－1,000)÷2,000
+　1,000÷2,000＝0.5＝50%
+
+安全余裕率は「A社＜B社」ですので記述は適切です。
+
+イ. 売上高が両社とも3,000万円である場合，営業利益はB社の方が高い。
+売上高から変動費と固定費を差し引いた金額が利益です。変動費は「売上高×変動費率」で計算します。
+[A社]
+　3,000－(3,000×0.4)－900
+＝3,000－1,200－900＝900
+[B社]
+　3,000－(3,000×0.7)－300
+＝3,000－2,100－300＝600
+
+売上高が3,000万円のときの営業利益は「A社＞B社」ですので記述は誤りです。
+
+ウ. 限界利益率はB社の方が高い。
+[A社]
+　(2,000－800)÷2,000
+＝1,200÷2,000＝0.6＝60%
+[B社]
+　(2,000－1,400)÷2,000
+＝600÷2,000＝0.3＝30%
+
+限界利益率は「A社＞B社」ですので記述は誤りです。
+
+エ. 損益分岐点売上高はB社の方が高い。
+損益分岐点売上高は「A社＞B社」ですので記述は誤りです。
+
+### 令和3年秋期　問77
+
+A社とB社の比較表から分かる，A社の特徴はどれか。
+
+![!](https://www.ap-siken.com/kakomon/03_aki/img/77.gif)  
+
+安全余裕率
+売上高 - 損益分岐点売上高 / 売上高 * 100
+
+限界利益率
+売上高 - 変動費率 / 売上高 * 100
+
+ア. 売上高の増加が大きな利益に結びつきやすい。
+正しい。A社はB社と比較して変動費率が低いので、売上に占める利益額はより大きくなります。A社のほうが限界利益率が高いので売上高の増加が大きな利益に結びつきやすいと言い換えることもできます。
+
+イ. 限界利益率が低い。
+限界利益率は売上高に占める限界利益の割合を示し「(売上高－変動費)÷売上高」の式で計算します。
+
+[A社]　(1,000－500)÷1,000＝0.5
+[B社]　(1,000－800)÷1,000＝0.2
+
+計算結果より、限界利益率が低いのはB社であることがわかります。
+
+ウ. 損益分岐点が低い。
+損益分岐点における売上高は以下の公式を使って求めます。
+
+　損益分岐点売上高＝固定費÷(1－変動費率)
+　変動費率＝変動費÷売上高
+
+[A社]
+変動費率＝500÷1,000＝0.5
+損益分岐点売上高＝400÷(1－0.5)＝800
+[B社]
+変動費率＝800÷1,000＝0.8
+損益分岐点売上高＝100÷(1－0.8)＝500
+
+計算結果より、損益分岐点売上高が低いのはB社であることがわかります。
+
+エ. 不況時にも，売上高の減少が大きな損失に結びつかず不況抵抗力は強い。
+仮に売上高が半分(500億円)に減少したとすると両者の損益は以下のようになります。
+
+![!](https://www.ap-siken.com/kakomon/03_aki/img/77a.gif)  
+
+A社はB社よりも固定費が高いので、売上の減少が利益の減少に結びつきやすいと言えます。
+
+### 平成27年秋期　問77
+
+表のような製品A，Bを製造，販売する場合，考えられる営業利益は最大で何円になるか。ここで，機械の年間使用可能時間は延べ15,000 時間とし，年間の固定費は製品A, Bに関係なく15,000,000円とする。
+
+![1](https://www.ap-siken.com/kakomon/27_aki/img/77.gif)  
+
+そもそも片方をフルで作ったほうがいいんじゃねって問題
+
+どちらの製品も製造数が制限されることはないので、まず2つの製品のうち、優先して製造する方を判断するためにどちらが効率よく利益を得られるかを考えます。
+
+効率性の優劣を判断するために、機械1時間当たりの利益を計算によって求めます。機械の１時間当たりの利益は、製品1個当たりの利益を製造時間で割ることで求めることができます。
+
+[製品A]
+　(30,000－18,000)÷8＝1,500円／時間
+[製品B]
+　(25,000－10,000)÷12＝1,250円／時間
+
+2つの製品のうち製品Aのほうが単位時間当たりの利益率が高いので、製品Aの製造に機械の使用時間を割り当てたほうが高い利益を得られるということです。この問題の条件では、製造個数に制限がないので、考えられる最大利益はすべての製造時間を製品Aに割り当てることで得られるということになります。
+
+1年間で製造可能な、製品Aの個数は、
+15,000時間÷8時間＝1,875個
+
+となり、この個数から営業利益を計算すると
+　[売上総利益] (30,000－18,000)×1,875＝22,500,000(円)
+　[年間の固定費] 15,000,000(円)
+
+したがって考えられる最大の営業利益は、
+
+　22,500,000－15,000,000＝7,500,000(円)
+
+となります。
+
+### 平成26年秋期　問77
+
+最大利益が見込める新製品の設定価格はどれか。ここで，いずれの場合にも，次の費用が発生するものとする。
+　　固定費：1,000,000円
+　　変動費：600円／個
+
+![!](https://www.ap-siken.com/kakomon/26_aki/img/77.gif)  
+
+利益は"売上－費用"で計算できます。
+
+この問題では、固定費と変動費が決められているので、
+
+　利益＝価格×販売個数－固定費－変動費×販売個数
+
+の式でそれぞれの場合の利益額を計算します。
+1,000
+　1000×80,000－1,000,000－600×80,000
+＝80,000,000－1,000,000－48,000,000
+＝31,000,000
+1,200
+　1200×70,000－1,000,000－600×70,000
+＝84,000,000－1,000,000－42,000,000
+＝41,000,000
+1,400
+　1400×60,000－1,000,000－600×60,000
+＝84,000,000－1,000,000－36,000,000
+＝47,000,000
+1,600
+　1600×50,000－1,000,000－600×50,000
+＝80,000,000－1,000,000－30,000,000
+＝49,000,000
+
+---
+
 ## 1回目に間違えた問題
 
 商品の1日当たりの販売個数の予想確率が表のとおりであるとき，1個当たりの利益を1,000円とすると，利益の期待値が最大になる仕入個数は何個か。ここで，仕入れた日に売れ残った場合，1個当たり300円の廃棄ロスが出るものとする。
