--- a/BasicInformation/午前/3.ストラテジ系/6.企業活動.md
+++ b/BasicInformation/午前/3.ストラテジ系/6.企業活動.md
@@ -1002,6 +1002,39 @@ A社はB社よりも固定費が高いので、売上の減少が利益の減少
 ＝80,000,000－1,000,000－30,000,000
 ＝49,000,000
 
+### 平成29年秋期　問77
+
+今年度の事業損益実績は表のとおりである。来年度の営業利益目標を240百万円としたとき，来年度の目標売上高は何百万円か。ここで，来年度の変動費率は今年度と同じであり，製造固定費と販売固定費は今年度に比べそれぞれ80百万円，20百万円の増加を見込む。
+
+![!](https://www.ap-siken.com/kakomon/29_aki/img/77.gif)  
+
+売上高と利益には次の関係があります。
+
+　売上高－変動費－固定費＝利益
+
+来年度の変動費率は今年度と同じなので、売上高から変動費を引いた限界利益は、
+
+　売上高×(1－変動費率)
+
+で表すことができます。
+
+来年度の固定費は、
+
+　380＋100＋80＋20＝580
+
+変動費率は、
+
+　(720＋240)／1600＝0.6
+
+なので、後は公式に来年度の数値を代入して目標売上高(N)を計算します。
+
+　N×(1－0.6)－580＝240
+　0.4N－580＝240
+　0.4N＝820
+　N＝2050
+
+以上より、240百万円の営業利益を達成するために必要な売上高は2,050百万円とわかります。
+
 ---
 
 ## 1回目に間違えた問題
