企業活動完了、プロマネ少し

--- a/BasicInformation/午前/2.マネジメント系/1.プロジェクトマネジメント.md
+++ b/BasicInformation/午前/2.マネジメント系/1.プロジェクトマネジメント.md
@@ -2,6 +2,47 @@
 
 ---
 
+## プロジェクトのリスク
+
+### リスクマネジメント
+
+PMBOKガイド第5版において、リスクマネジメントとは「プロジェクトのリスクを識別し、分析し、リスクに対応するための系統的なプロセスで、プロジェクトの目標に対してプラスに働く事象には、それが起こる確率とその発生結果が最大となるように、マイナスに働く事象については、逆に最小となるようにすること」とされています。  
+
+プロジェクトにマイナスの影響を与えるリスクに対して、「回避」「転嫁」「軽減」「受容」の4つの戦略があります。  
+
+#### 回避(かいひ)
+
+リスクそのものを取り除いたり、プロジェクトに影響がないようにスコープや目標を縮小・変更する方策。  
+
+#### 転嫁(てんか)
+
+リスクによるマイナスの影響を第三者へ移転する方策。リスクのある業務・作業のアウトソーシングや、損害保険の契約によってリスクの影響を自社から他社に移転する。  
+
+#### 軽減(けいげん)
+
+リスクの影響範囲を狭くしたり、発生確率を低減するような方策。  
+
+#### 受容(じゅよう)
+
+リスクが現実化した時の影響が許容可能範囲内である時やリスクの除去が困難である場合に、特段対策をせずにそのままにしておくこと。  
+対策費用が予想される損失金額を上回っているときなどに採られる方策。  
+
+---
+
+## プロジェクトの時間
+
+### EVM(Earned Value Management)
+
+プロジェクトにおける作業を金銭の価値に置き換えて、コストとスケジュールの2つを定量的に管理する進捗管理手法です。  
+EVMでは予算値と実績値からPV、EV、ACの各指標を算出し、それぞれを比較することでコスト差異とスケジュール差異を把握します。  
+
+![!](https://www.ap-siken.com/kakomon/02_aki/img/52.gif)  
+
+---
+
+## aa
+
+---
+
 **ファンクションポイント法**  
 外部入出力や内部ファイルの数と難易度の高さから、ファンクションポイントという数値を算出し、それを元に論理的に開発規模を見積もる手法です。
-
