--- a/BasicInformation/午前/3.ストラテジ系/6.企業活動.md
+++ b/BasicInformation/午前/3.ストラテジ系/6.企業活動.md
@@ -776,6 +776,21 @@ N＝2050
 売上高に対する限界利益の割合を示す。
 ●(売上高－変動費)÷売上高×100
 
+### 総資産回転率
+
+資産をどれだけ有効に活用して売上を上げているかを表す財務指標で、以下の式で算出される。  
+売上高÷総資産  
+
+### 総資産営業利益率(ROA)
+
+保有する資産に対してどれだけの利益を上げているかを表す財務指標で、以下の式で算出される。  
+営業利益÷総資産  
+
+### 売上高営業利益率
+
+売上高に対してどれだけの利益を上げているかを表す財務指標で、以下の式で算出される。  
+営業利益÷売上高  
+
 ---
 
 ## 計算問題まとめ
@@ -1034,6 +1049,205 @@ A社はB社よりも固定費が高いので、売上の減少が利益の減少
 　N＝2050
 
 以上より、240百万円の営業利益を達成するために必要な売上高は2,050百万円とわかります。
+
+### 平成30年秋期　問77
+
+売上高が7,000万円のとき，200万円の損失，売上高が9,000万円のとき，600万円の利益と予想された。売上高が8,000万円のときの変動費は何万円か。ここで，売上高が変わっても変動費率は変わらないものとする。
+
+``` txt
+売上と費用及び損益には次の関係があります。
+
+　損益＝売上高－固定費－変動費
+
+そして、変動費は「売上高×変動費率」で表せますから、
+
+　損益＝売上高－固定費－(売上高×変動費率)
+
+となります。
+
+この式に売上が7,000万のケースと9,000万円のケースの値を代入して式を立てます。
+
+　－200＝7,000－固定費－7,000×変動費率
+　　600＝9,000－固定費－9,000×変動費率
+
+この連立一次方程式の下の式から上の式を引くと、固定費が消えて変動費がわかります。
+
+　800＝2,000－2,000×変動費率
+　2,000×変動費率＝1,200
+　変動費率＝0.6
+
+売上が8,000万円のときの変動費は、
+
+　8,000×0.6＝4,800(万円)
+```
+
+### 令和3年秋期　問76
+
+製品X，Yを1台製造するのに必要な部品数は，表のとおりである。製品1台当たりの利益がX，Yともに1万円のとき，利益は最大何万円になるか。ここで，部品Aは120個，部品Bは60個まで使えるものとする。
+
+![!](https://www.ap-siken.com/kakomon/03_aki/img/76.gif)  
+
+製品1台当たりの利益は同額であるため、部品を余すことなく使い、最も多く作ることのできる組合せが部品の最適配分となります。1次式を満たす変数の値の中で式を最大化または最小化する値を求める方法として「線形計画法」があります。
+
+この問題も製品Xの生産数をx、製品Yの生産数をyとして、"x＋yの最大化"を目的関数とする線形計画法の問題として捉えることができます。部品A・Bを使い切るときのxとyの値は連立方程式を使って以下のように求めます。
+
+　{3x＋2y＝120　…①
+　{x＋2y＝60　…②
+
+①－②をして、
+
+　2x＝60
+　x＝30　…③
+
+②に③を代入して、
+
+　30＋2y＝60
+　2y＝30
+　y＝15
+
+計算結果より、製品Xを30個、製品Yを15個生産したときに、すべての部品を使い切り、計45個の製品を生産できることがわかります。製品1台当たりの利益は1万円ですから、利益の最大額は「ウ」の45万円となります。
+
+![!](https://www.ap-siken.com/kakomon/03_aki/img/76_1.gif)  
+
+### 平成31年春期　問76
+
+表の事業計画案に対して，新規設備投資に伴う減価償却費(固定費)の増加1,000万円を織り込み，かつ，売上総利益を3,000万円とするようにしたい。変動費率に変化がないとすると，売上高の増加を何万円にすればよいか。
+
+![!](https://www.ap-siken.com/kakomon/31_haru/img/76.gif)  
+
+``` txt
+まず、必要な売上高を求めるのに必要な数値を以下のように求めます。
+変動費率 … 10,000÷20,000＝0.5
+固定費は … 8,000＋(増加分)1,000＝9,000
+上記の変動費率と固定費をもとに、「売上高＝変動費＋固定費＋売上総利益」の関係を使って計算します。
+
+売上高を a とおくと、
+
+　a＝0.5a＋9,000＋3,000
+　0.5a＝12,000
+　a＝24,000(万円)
+
+なので、3,000万円の売上総利益を得るためには24,000万円の売上高が必要であることになります。
+
+現在の事業計画案では20,000万円の売上高を予定しているため、
+
+　24,000－20,000＝4,000(万円)
+
+4,000万円の売上高の増加が必要となります。
+
+また、損益分岐点売上高の公式とは別に「目標利益達成売上高」の公式というものがあります。
+
+　目標利益達成売上高＝(固定費＋目標利益)÷(1－変動費率)
+
+損益分岐点を求める公式「固定費÷(1－変動費率)」の固定費の部分に目標利益を組み入れた式となっています。これを利用して、
+
+　必要売上高＝(9,000＋3,000)÷0.5＝24,000(万円)
+　売上高の増加＝24,000－20,000＝4,000(万円)
+```
+
+### 平成27年秋期　問76
+
+表から，卸売業A社と小売業B社の財務指標を比較したとき，卸売業A社について適切な記述はどれか。
+
+![!](https://www.ap-siken.com/kakomon/27_aki/img/76.gif)  
+
+``` txt
+まず、設問に登場する財務指標「総資産回転率」と「総資産営業利益率」及び「売上高営業利益率」について確認します。
+
+総資産回転率
+資産をどれだけ有効に活用して売上を上げているかを表す財務指標で、以下の式で算出される。
+　売上高÷総資産
+
+総資産営業利益率(ROA)
+保有する資産に対してどれだけの利益を上げているかを表す財務指標で、以下の式で算出される。
+　営業利益÷総資産
+
+売上高営業利益率
+売上高に対してどれだけの利益を上げているかを表す財務指標で、以下の式で算出される。
+　営業利益÷売上高
+
+上記の式を用いてA社、B社の財務指標を計算すると以下のようになります。
+
+[A社]
+総資産回転率：800÷100＝800%
+総資産営業利益率：20÷100＝20%
+売上高営業利益率：20÷800＝2.5%
+
+[B社]
+総資産回転率：1,000÷900≒111%
+総資産営業利益率：90÷900＝10%
+売上高営業利益率：90÷1,000＝9%
+
+計算した値をもとに選択肢の記述を検証します。
+
+ア. 売上高，総資産の額がともに低く，総資産回転率も低い。
+総資産回転率は、A社の方が高いため誤りです。
+
+イ. 売上高営業利益率が高く，総資産営業利益率も高い。
+売上高営業利益率は、B社の方が高いため誤りです。
+
+ウ. 営業利益，総資産の額がともに低く，総資産営業利益率も低い。
+総資産営業利益率は、A社の方が高いため誤りです。
+
+エ. 総資産回転率が高く，総資産営業利益率も高い。
+正しい。総資産回転率と総資産営業利益率の両方がA社＞B社となっています。
+```
+
+### 平成30年春期　問77
+
+損益計算資料から求められる損益分岐点売上高は，何百万円か。
+
+![!](https://www.ap-siken.com/kakomon/30_haru/img/77.gif)  
+
+``` txt
+損益分岐点売上高は、次の公式で計算することができます。
+
+　損益分岐点売上高＝固定費／(1－変動費率)
+　変動費率＝変動費／売上高
+
+設問の損益計算資料における各値は、
+[変動費]　材料費200＋外注費100＝300
+[固定費]　製造固定費100＋販売固定費80＝180
+[変動費率]　(200＋100)／500＝0.6
+になるので、損益分岐点売上高は、
+
+　180／(1－0.6)
+＝180／0.4＝450(百万円)
+```
+
+### 令和2年秋期　問77
+
+資料は今年度の損益実績である。翌年度の計画では，営業利益を30百万円にしたい。翌年度の売上高は何百万円を計画すべきか。ここで，翌年度の固定費，変動費率は今年度と変わらないものとする。
+
+![!](https://www.ap-siken.com/kakomon/02_aki/img/77.gif)  
+
+``` txt
+この損益実績において営業利益は「売上高－変動費－固定費」で求められます。変動費は売上高の増減によって増減する費用、固定費は売上高にかかわらず毎年一定の金額がかかる費用です。
+
+まず費用を変動費と固定費に分別し各金額を求めます（計算の過程で単位：百万円は省略しています）。
+
+[固定費]
+　製造固定費100＋販売固定費80＝180
+[変動費]
+　材料費200＋外注費100＝300
+
+次に変動費から変動費率（売上高に占める変動費の割合）を求めます。
+
+　変動費300÷売上高500＝0.6
+
+変動費は売上高に対して一定の割合でかかる費用なので、変動費率を使用して「売上高×0.6」と表すことができます。
+
+売上高をaとし、ここまで求めた数値を用いて以下の式で答えを計算します。
+
+　営業利益＝売上高－(売上高×0.6)－固定費
+　30＝a－0.6a－180
+　30＝a－0.6a－180
+　a－0.6a＝30＋180
+　0.4a＝210
+　a＝525
+
+よって、翌年度の営業利益を30百万円とするためには、525百万円の売上高を計画するべきであることがわかります。
+```
 
 ---
 
