--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -709,6 +709,17 @@ READ UNCOMMITTED
 
 ---
 
+## JWT(JSON Web Token)
+
+読み方は「ジョット」
+
+JWTとは、JSON形式で表現された認証情報などをURL文字列などとして安全に送受信できるよう、符号化やデジタル署名の仕組みを規定した標準規格。  
+IETFによってRFC 7519として標準化されている。  
+
+
+
+---
+
 ## 雑記
 
 トーレス・デル・パイネ国立公園
