プロマネ完了、システム監査開始

--- a/BasicInformation/午前/2.マネジメント系/3.システム監査.md
+++ b/BasicInformation/午前/2.マネジメント系/3.システム監査.md
@@ -43,7 +43,17 @@
 監査調書は、監査報告書に記載される監査結果、監査意見、改善勧告などの根拠となります。
 システム監査基準では「システム監査人は、実施した監査手続の結果とその関連資料を、監査調書として作成しなければならない。監査調書は、監査結果の裏付けとなるため、監査の結論に至った過程がわかるように秩序整然と記録し、適切な方法によって保存しなければならない」と定められています。
 
+## システム監査
 
+### 平成31年春期　問60
+
+事務所の物理的セキュリティ対策について，JIS Q 27002:2014(情報セキュリティ管理策の実践のための規範)に基づいて情報セキュリティ監査を実施した。判明した状況のうち，監査人が監査報告書に指摘事項として記載すべきものはどれか。
+
+``` txt
+機密性の高い情報資産が置かれている部屋には，入室許可を得た者が共通の暗証番号を入力して入室している。
+
+正しい。「適切なアクセス制御の実施（例えば，アクセスカード及び秘密の個人識別番号のような，二要素認証の仕組みの導入）によって，秘密情報を処理又は保管する領域へのアクセスを，認可された者だけに制限する。」としており、共通の暗証番号では個人を特定できないため指摘事項となります。
+```
 
 A社では，自然災害などの際の事業継続を目的として，業務システムのデータベースのバックアップを取得している。
 その状況について，"情報セキュリティ管理基準(平成28年)"に従って実施した監査結果として判明した状況のうち，
