パソコン切り替えのため一時プッシュ

--- a/AppliedInformation/午後/H28A.md
+++ b/AppliedInformation/午後/H28A.md
@@ -2,6 +2,48 @@
 
 ---
 
+## セキュリティ
+
+``` txt
+```
+
+---
+
+## プログラミング 魔方陣
+
+応用最初のアルゴリズム・プログラミング。  
+
+話は全部わかったけど、表現の問題とかNが3以外の場合で対応出来なかったりで点を落としてしまった。  
+気持ちは晴れないが、久しぶりにやってここまで出来たのならいい方ではなかろうか。  
+一番難しいと思われる、参照も代入もされない要素はどれか、という問題も図を用いる事であっさり解決する事が出来た。  
+この点がこの問題に置ける一番のポイントかもしれない。  
+
+本番もこれくらい落ち着いてできるのなら得点源にはなり得るのだがなぁ・・・。  
+
+``` txt 30分 6/11 実質100点
+N^N × N^3
+
+houjin[y][N+1]
+houjin[N+1][x]
+x ← N/2 + 1 × x←(N+1)/2
+Nと等しくない × N^2未満
+yb - 1
+xb
+houjin[1][4] × houjin[1][N+1]
+houjin[4][1] × houjin[N+1][1]
+
+N
+1
+
+---
+
+特にない。
+答えを見れば、確かにNが3以外の場合に対応できない回答だったといえるので、それ以上解説することもない。
+問題も頭の中でトレース出来て、図を用いて答えを導き出せたので、やっぱり特にない。
+```
+
+---
+
 ## ネットワーク IP電話の導入
 
 計算問題は全部合っていたが、それ以外は全滅だった。  
