午前中に昨日の復習

--- a/AppliedInformation/午後/H26A.md
+++ b/AppliedInformation/午後/H26A.md
@@ -141,7 +141,9 @@ head × head->next
 ∴ウ＝a->next
 
 ->nextは次のセルへのポインタなんだから、それをnullにするのは当たり前だよな。
-aの何かをnullにするのはわかっていたが、a事態が次のセルを表しているのではなかった。aはただのポインタ変数でしかない。
+aの何かをnullにするのはわかっていたが、ポインタとnextが曖昧だった。
+aはただのポインタ変数でしかないので、nullにしたら位置情報がなくなるだけ。
+次への連結を削除するならnextをnullにするのが自然、というか普通。  
 
 
 [1][3]
@@ -168,6 +170,26 @@ if (bがNULLと等しくない)
 
 ∴カ＝head->next
 
+→
+これもだな。解いている時に違和感はあったけど、確証がなかったからそのままreturnしてしまった。
+でも普通に考えてこれしかないんだよな。
+
+
+
+[4]
+32個のセルから成る連結リストに対して、図2のアルゴリズムに相当するプログラムを実行した場合、(1)～(3)が実行されることで各1個のセルを持つ32つのリストに分割されます。
+
+マージソートでは隣り合ったリスト同士を整列しながら併合していくことを繰り返します。併合は次のように進んでいきます。
+1要素×32リストを2つの要素を持つ16つのリストにする。ここで関数 merge が16回呼び出される。
+2要素×16リストを4つの要素を持つ8つのリストにする。ここで関数 merge が8回呼び出される。
+4要素×8リストを8つの要素を持つ4つのリストにする。ここで関数 merge が4回呼び出される。
+8要素×4リストを16つの要素を持つ2つのリストにする。ここで関数 merge が2回呼び出される。
+16要素×2リストを32つの要素を持つ1つのリストにして、併合完了。ここで関数 merge が1回呼び出される。
+よって、関数 merge が1回呼び出される回数は、
+
+　16＋8＋4＋2＋1＝31回
+
+∴31
 ```
 
 ---
